# nats-stream-processor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
charts/: create-secrets.sh
charts/nats-stream-processor/: Chart.yaml  values.yaml
charts/nats-stream-processor/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: config.py  health.py  logging_setup.py  metrics.py  nats_client.py  sentiment.py  service.py  topic_classifier.py  types.py
