[project]
name = "nats-stream-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "nats-py>=2.12.0",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
